
Change since 0.6.1

Silenced the name space warning (I think this is a bug in soap4r)

Changes since 0.6.0.

Implement SoftLayer::Base#call to make dynamic method calls possible.
Fix a reference to a renamed class (ParamHeader -> Param)

Changes since 0.5.0.

Implemented resultLimit headers.  See readme and the rdoc for SoftLayer::ResultLimit.
Renamed SoftLayer::ObjectMaskHeader to SoftLayer::ObjectMask and SoftLayer::ParamHeader to SoftLayer::Param
