@@ -2,6 +2,8 @@
 Change since 0.6.1
 
 Silenced the name space warning (I think this is a bug in soap4r)
+Created an exception class that's really used as a proxy for soap exceptions.  This exception is 
+raised in a few places where needed.
 
 Changes since 0.6.0.
 
